--- a/views/index.html
+++ b/views/index.html
@@ -14,10 +14,10 @@
     <header>
         <nav>
             <ul class="nav nav-pills">
-                <li class="nav-item">
+                <li class="nav-item right">
                     <a class="nav-link active" href="#">Active</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item right">
                     <a class="nav-link" href="#">Link</a>
                 </li>
             </ul>
