made some stuff, uploaded via bat

--- a/views/index.html
+++ b/views/index.html
@@ -17,18 +17,19 @@
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                 <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Home</a>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="/">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Dashboard</a>
+                        <a class="nav-link" href="/dashboard">Dashboard</a>
                     </li>
-                </ul>
-                <p class="my-2 my-lg-0 icon"><i class="fas fa-info-circle"></i></p>
-                <p class="my-2 my-lg-0 icon" id="add" data-toggle="modal" data-target="#myModal"><i
-                        class="fas fa-plus"></i></p>
-            </div>
-        </nav>
+                </ul><ul class="navbar-nav mt-2 mt-lg-0"><li class="nav-item">
+                        <a class="nav-link" href="/logIn">Log In</a>
+                    </li>
+                    <li class="nav-item">
+                            <a class="nav-link" href="/signUp">Sign Up</a>
+                        </li></ul>
+                
     </header>
     <main>
 
