made some stuff, uploaded via bat

--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -79,7 +79,7 @@
                         <div id="form">
                             <div class="input-group mb-3">
                                 <div class="input-group-prepend">
-                                    <span class="input-group-text" id="basic-addon1">Task Name</span>
+                                    <span class="input-group-text" id="taskName">Task Name</span>
                                 </div>
                                 <input type="text" class="form-control" placeholder="Task Name" aria-label="Task Name"
                                     aria-describedby="basic-addon1">
