made some stuff, uploaded via bat

--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -79,14 +79,14 @@
                         <div id="form">
                             <div class="input-group mb-3">
                                 <div class="input-group-prepend">
-                                    <span class="input-group-text" id="taskName">Task Name</span>
+                                    <span class="input-group-text" id="taskNameInput">Task Name</span>
                                 </div>
                                 <input type="text" class="form-control" placeholder="Task Name" aria-label="Task Name"
                                     aria-describedby="basic-addon1">
                             </div>
                             <div class="input-group mb-3">
                                 <div class="input-group-prepend">
-                                    <span class="input-group-text" id="basic-addon1">Task Description</span>
+                                    <span class="input-group-text" id="taskDescriptionInput">Task Description</span>
                                 </div>
                                 <input type="text" class="form-control" placeholder="Task Description"
                                     aria-label="Task Description" aria-describedby="basic-addon1">
@@ -98,7 +98,7 @@
             </div>
             <div id="log">
             </div>
-        </div>
+    </div>
     </main>
     <footer>
         <div class="bar"></div>
