made some stuff, uploaded via bat

--- a/views/login.html
+++ b/views/login.html
@@ -44,7 +44,6 @@
                     aria-describedby="basic-addon1">
             </div>
             <div class="input-group mb-3">
-
                 <input type="text" class="form-control" id="pass1" placeholder="Password" aria-label="Password"
                     aria-describedby="basic-addon1">
             </div>
@@ -55,6 +54,8 @@
     <footer>
 
     </footer>
+    <script src="./public/js/jquery/jquery.js"></script>
+    <script src="./public/js/login.js"></script>
 
 </body>
 
