--- a/views/signup.html
+++ b/views/signup.html
@@ -32,6 +32,8 @@
                         <a class="nav-link active" href="/signup">Sign Up</a>
                     </li>
                 </ul>
+            </div>
+        </nav>
 
     </header>
     <main>
@@ -45,7 +47,7 @@
 
                 <input type="text" class="form-control" id="lName" placeholder="Last Name" aria-label="Last Name"
                     aria-describedby="basic-addon1">
-            </div>  
+            </div>
             <div class="input-group mb-3">
                 <div class="input-group-prepend">
                     <span class="input-group-text" id="basic-addon1">@</span>
@@ -55,13 +57,13 @@
             </div>
             <div class="input-group mb-3">
 
-                <input type="text" class="form-control" id="pass1" placeholder="Password" aria-label="Password"
+                <input type="password" class="form-control" id="pass1" placeholder="Password" aria-label="Password"
                     aria-describedby="basic-addon1">
             </div>
             <div class="input-group mb-3">
 
-                <input type="text" class="form-control" id="pass2" placeholder="Confirm Password" aria-label="Confirm Password"
-                    aria-describedby="basic-addon1">
+                <input type="password" class="form-control" id="pass2" placeholder="Confirm Password"
+                    aria-label="Confirm Password" aria-describedby="basic-addon1">
             </div>
             <button type="button" id="submit" class="btn btn-outline-primary">Sign Up</button>
         </div>
@@ -69,7 +71,8 @@
     <footer>
 
     </footer>
-
+    <script src="./public/js/jquery/jquery.js"></script>
+    <script src="./public/js/signup.js"></script>
 </body>
 
 </html>
