--- a/views/login.html
+++ b/views/login.html
@@ -35,6 +35,9 @@
 
     </header>
     <main>
+            <div class="alert alert-danger hidden" role="alert" id="alert">
+                    This is a danger alert—check it out!
+                  </div>
         <div class="form">
             <div class="input-group mb-3">
                 <div class="input-group-prepend">
@@ -55,7 +58,7 @@
 
     </footer>
     <script src="./public/js/jquery/jquery.js"></script>
-    <script src="./public/js/login.js"></script>
+    <script src="./public/js/signuplogin.js"></script>
 
 </body>
 
