--- a/views/signup.html
+++ b/views/signup.html
@@ -37,6 +37,9 @@
 
     </header>
     <main>
+            <div class="alert alert-danger hidden" role="alert" id="alert">
+                    This is a danger alert—check it out!
+                  </div>
         <div class="form">
             <div class="input-group mb-3">
 
@@ -72,7 +75,7 @@
 
     </footer>
     <script src="./public/js/jquery/jquery.js"></script>
-    <script src="./public/js/signup.js"></script>
+    <script src="./public/js/signuplogin.js"></script>
 </body>
 
 </html>
