made some stuff, uploaded via bat

--- a/views/signup.html
+++ b/views/signup.html
@@ -43,29 +43,29 @@
         <div class="form">
             <div class="input-group mb-3">
 
-                <input type="text" class="form-control" id="fName" placeholder="First Name" aria-label="First Name"
+                <input type="text" class="form-control" id="firstname" placeholder="First Name" aria-label="First Name"
                     aria-describedby="basic-addon1">
             </div>
             <div class="input-group mb-3">
 
-                <input type="text" class="form-control" id="lName" placeholder="Last Name" aria-label="Last Name"
+                <input type="text" class="form-control" id="lastname" placeholder="Last Name" aria-label="Last Name"
                     aria-describedby="basic-addon1">
             </div>
             <div class="input-group mb-3">
                 <div class="input-group-prepend">
                     <span class="input-group-text" id="basic-addon1">@</span>
                 </div>
-                <input type="text" class="form-control" id="uName" placeholder="Username" aria-label="Username"
+                <input type="text" class="form-control" id="username" placeholder="Username" aria-label="Username"
                     aria-describedby="basic-addon1">
             </div>
             <div class="input-group mb-3">
 
-                <input type="password" class="form-control" id="pass1" placeholder="Password" aria-label="Password"
+                <input type="password" class="form-control" id="password" placeholder="Password" aria-label="Password"
                     aria-describedby="basic-addon1">
             </div>
             <div class="input-group mb-3">
 
-                <input type="password" class="form-control" id="pass2" placeholder="Confirm Password"
+                <input type="password" class="form-control" id="password2" placeholder="Confirm Password"
                     aria-label="Confirm Password" aria-describedby="basic-addon1">
             </div>
             <button type="button" id="submit" class="btn btn-outline-primary">Sign Up</button>
