--- a/views/login.html
+++ b/views/login.html
@@ -43,11 +43,11 @@
                 <div class="input-group-prepend">
                     <span class="input-group-text" id="basic-addon1">@</span>
                 </div>
-                <input type="text" class="form-control" id="uName" placeholder="Username" aria-label="Username"
+                <input type="text" class="form-control" id="username" placeholder="Username" aria-label="Username"
                     aria-describedby="basic-addon1">
             </div>
             <div class="input-group mb-3">
-                <input type="text" class="form-control" id="pass1" placeholder="Password" aria-label="Password"
+                <input type="text" class="form-control" id="password" placeholder="Password" aria-label="Password"
                     aria-describedby="basic-addon1">
             </div>
            
