--- a/views/login.html
+++ b/views/login.html
@@ -24,7 +24,7 @@
                         <a class="nav-link" href="/dashboard">Dashboard</a>
                     </li>
                 </ul>
-                <ul class="navbar-nav mt-2 mt-lg-0">
+                <ul class="navbar-nav mt-2 mt-lg-0" id="account">
                     <li class="nav-item">
                         <a class="nav-link active" href="/login">Log In</a>
                     </li>
@@ -47,7 +47,7 @@
                     aria-describedby="basic-addon1">
             </div>
             <div class="input-group mb-3">
-                <input type="text" class="form-control" id="pass1" placeholder="Password" aria-label="Password"
+                <input type="password" class="form-control" id="pass1" placeholder="Password" aria-label="Password"
                     aria-describedby="basic-addon1">
             </div>
            
@@ -59,6 +59,7 @@
     </footer>
     <script src="./public/js/jquery/jquery.js"></script>
     <script src="./public/js/signuplogin.js"></script>
+    <script src="./public/js/js.js"></script>
 
 </body>
 
