made some stuff, uploaded via bat

--- a/views/signup.html
+++ b/views/signup.html
@@ -37,9 +37,9 @@
 
     </header>
     <main>
-            <div class="alert alert-danger hidden" role="alert" id="alert">
-                    This is a danger alert—check it out!
-                  </div>
+        <div class="alert alert-danger hidden" role="alert" id="alert">
+            This is a danger alert—check it out!
+        </div>
         <div class="form">
             <div class="input-group mb-3">
 
@@ -66,7 +66,8 @@
             <div class="input-group mb-3">
 
                 <input type="password" class="form-control" id="password2" placeholder="Confirm Password"
-                    aria-label="Confirm Password" aria-describedby="basic-addon1">
+                    aria-label="Confirm Password" aria-describedby="basic-addon1" required>
+
             </div>
             <button type="button" id="submit" class="btn btn-outline-primary">Sign Up</button>
         </div>
