--- a/views/index.html
+++ b/views/index.html
@@ -24,10 +24,10 @@
                         <a class="nav-link" href="/dashboard">Dashboard</a>
                     </li>
                 </ul><ul class="navbar-nav mt-2 mt-lg-0"><li class="nav-item">
-                        <a class="nav-link" href="/logIn">Log In</a>
+                        <a class="nav-link" href="/login">Log In</a>
                     </li>
                     <li class="nav-item">
-                            <a class="nav-link" href="/signUp">Sign Up</a>
+                            <a class="nav-link" href="/signup">Sign Up</a>
                         </li></ul>
                 
     </header>
