--- a/views/login.html
+++ b/views/login.html
@@ -41,13 +41,16 @@
         <div class="form">
             <div class="input-group mb-3">
                 <div class="input-group-prepend">
-                    <span class="input-group-text" id="basic-addon1">@</span>
+                    <span class="input-group-text" id="basic-addon1"><i class="fas fa-at"></i></span>
                 </div>
                 <input type="text" class="form-control" id="username" placeholder="Username" aria-label="Username"
                     aria-describedby="basic-addon1">
             </div>
             <div class="input-group mb-3">
-                <input type="text" class="form-control" id="password" placeholder="Password" aria-label="Password"
+                <div class="input-group-prepend">
+                    <span class="input-group-text" id="basic-addon1"><i class="fas fa-key"></i></span>
+                </div>
+                <input type="password" class="form-control" id="password" placeholder="Password" aria-label="Password"
                     aria-describedby="basic-addon1">
             </div>
 
