--- a/views/signup.html
+++ b/views/signup.html
@@ -42,29 +42,45 @@
         </div>
         <div class="form">
             <div class="input-group mb-3">
+                <div class="input-group-prepend">
+                    <span class="input-group-text" id="basic-addon1"><i class="fas fa-user-circle"></i></span>
+                </div>
 
                 <input type="text" class="form-control" id="firstname" placeholder="First Name" aria-label="First Name"
                     aria-describedby="basic-addon1">
             </div>
             <div class="input-group mb-3">
-
+                <div class="input-group-prepend">
+                    <span class="input-group-text" id="basic-addon1"><i class="fas fa-user-circle"></i></span>
+                </div>
                 <input type="text" class="form-control" id="lastname" placeholder="Last Name" aria-label="Last Name"
                     aria-describedby="basic-addon1">
             </div>
             <div class="input-group mb-3">
                 <div class="input-group-prepend">
-                    <span class="input-group-text" id="basic-addon1">@</span>
+                    <span class="input-group-text" id="basic-addon1"><i class="far fa-envelope"></i></span>
+                </div>
+                <input type="email" class="form-control" id="email" placeholder="Email" aria-label="Email"
+                    aria-describedby="basic-addon1">
+            </div>
+            <div class="input-group mb-3">
+                <div class="input-group-prepend">
+                    <span class="input-group-text" id="basic-addon1"><i class="fas fa-at"></i></span>
                 </div>
                 <input type="text" class="form-control" id="username" placeholder="Username" aria-label="Username"
                     aria-describedby="basic-addon1">
             </div>
             <div class="input-group mb-3">
-
+                <div class="input-group-prepend">
+                    <span class="input-group-text" id="basic-addon1"><i class="fas fa-key"></i></span>
+                </div>
                 <input type="password" class="form-control" id="password" placeholder="Password" aria-label="Password"
                     aria-describedby="basic-addon1">
             </div>
             <div class="input-group mb-3">
-
+                <div class="input-group-prepend">
+                    <span class="input-group-text" id="basic-addon1"><i class="fas fa-lock"></i></span>
+                </div>
                 <input type="password" class="form-control" id="password2" placeholder="Confirm Password"
                     aria-label="Confirm Password" aria-describedby="basic-addon1" required>
 
