--- a/views/login.html
+++ b/views/login.html
@@ -21,7 +21,7 @@
                         <a class="nav-link" href="/">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/dashboard">Dashboard</a>
+                        <a class="nav-link" href="/dashboard">ahsdkjashdkjashdk</a>
                     </li>
                 </ul>
                 <ul class="navbar-nav mt-2 mt-lg-0" id="account">
