--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -45,28 +45,51 @@
                 <p class="center">DONE</p>
             </div>
             <div class="taskViewGrid" id="taskView">
-                <div id="backlog" class="taskHolder">
-                    <div class="item">
-                        <h5 class="center">Fixa cssasasdjHASDKJHqslkjdhadsdads</h5>
-                    </div>
+                <div class="card">
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item taskItem">Task name</li>
+                        <li class="list-group-item taskItem">Task naem</li>
+                        <li class="list-group-item taskItem">Task name</li>
+                    </ul>
                 </div>
-                <div id="todo" class="taskHolder">
-                    <p>asdasd</p>
+                <div class="card">
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item taskItem">Task name</li>
+                        <li class="list-group-item taskItem">Task naem</li>
+                        <li class="list-group-item taskItem">Task name</li>
+                    </ul>
                 </div>
-                <div id="inProgress" class="taskHolder">
-                    <p>asdasd</p>
+                <div class="card">
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item taskItem">Task name</li>
+                        <li class="list-group-item taskItem">Task naem</li>
+                        <li class="list-group-item taskItem">Task name</li>
+                    </ul>
                 </div>
-                <div id="toVerify" class="taskHolder">
-                    <p>asdasd</p>
+                <div class="card">
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item taskItem">Task name</li>
+                        <li class="list-group-item taskItem">Task naem</li>
+                        <li class="list-group-item taskItem">Task name</li>
+                    </ul>
                 </div>
-                <div id="done" class="taskHolder">
-                    <p>asdasd</p>
+                <div class="card">
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item taskItem">Task name</li>
+                        <li class="list-group-item taskItem">Task naem</li>
+                        <li class="list-group-item taskItem">Task name</li>
+                    </ul>
                 </div>
-                <div id="impediments" class="taskHolder">
-                    <p>asdasd</p>
+                <div class="card">
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item taskItem">Task name</li>
+                        <li class="list-group-item taskItem">Task naem</li>
+                        <li class="list-group-item taskItem">Task name</li>
+                    </ul>
                 </div>
             </div>
         </div>
+        <div class="spacer"></div>
         <div id="moreinfo">
             <div class="taskInfo">
                 <div id="info">
@@ -111,6 +134,7 @@
     <script src="./public/js/jquery/jquery.js"></script>
     <script src="./public/js/socket.io/socket.io.js"></script>
     <script src="./public/js/socket.io.js"></script>
+    <script src="./public/js/dashboardDesign.js"></script>
 </body>
 
 </html>
