--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -50,9 +50,26 @@
                         <li class="list-group-item taskItem">Task name</li>
                         <li class="list-group-item taskItem">Task naem</li>
                         <li class="list-group-item taskItem">Task name</li>
+                        <li class="list-group-item taskItem">Task name</li>
+                        <li class="list-group-item taskItem">Task name</li>
                     </ul>
                 </div>
                 <div class="card">
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item taskItem">Task name</li>
+                        <li class="list-group-item taskItem">Task naem</li>
+                        <li class="list-group-item taskItem">Task name</li>
+                    </ul>
+                </div>
+                <div class="card">
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item taskItem">Task name</li>
+                        <li class="list-group-item taskItem">Task naem</li>
+                        <li class="list-group-item taskItem">Task name</li>
+                        <li class="list-group-item taskItem">Task name</li>
+                    </ul>
+                </div>
+                <div class="card my-custom-scrollbar">
                     <ul class="list-group list-group-flush">
                         <li class="list-group-item taskItem">Task name</li>
                         <li class="list-group-item taskItem">Task naem</li>
@@ -71,19 +88,8 @@
                         <li class="list-group-item taskItem">Task name</li>
                         <li class="list-group-item taskItem">Task naem</li>
                         <li class="list-group-item taskItem">Task name</li>
-                    </ul>
-                </div>
-                <div class="card">
-                    <ul class="list-group list-group-flush">
                         <li class="list-group-item taskItem">Task name</li>
-                        <li class="list-group-item taskItem">Task naem</li>
                         <li class="list-group-item taskItem">Task name</li>
-                    </ul>
-                </div>
-                <div class="card">
-                    <ul class="list-group list-group-flush">
-                        <li class="list-group-item taskItem">Task name</li>
-                        <li class="list-group-item taskItem">Task naem</li>
                         <li class="list-group-item taskItem">Task name</li>
                     </ul>
                 </div>
