--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -46,23 +46,23 @@
             </div>
             <div class="taskViewGrid" id="taskView">
                 <div class="card">
-                    <ul class="list-group list-group-flush">
+                    <ul class="list-group list-group-flush" ondrop="drop(event)" ondragover="allowDrop(event)">
+                        <li draggable="true" ondragstart="drag(event)" class="list-group-item taskItem">Task name</li>
+                        <li draggable="true" ondragstart="drag(event)" class="list-group-item taskItem">Task naem</li>
+                        <li draggable="true" ondragstart="drag(event)" class="list-group-item taskItem">Task name</li>
+                        <li draggable="true" ondragstart="drag(event)" class="list-group-item taskItem">Task name</li>
+                        <li draggable="true" ondragstart="drag(event)" class="list-group-item taskItem">Task name</li>
+                    </ul>
+                </div>
+                <div class="card">
+                    <ul class="list-group list-group-flush" ondrop="drop(event)" ondragover="allowDrop(event)">
                         <li class="list-group-item taskItem">Task name</li>
                         <li class="list-group-item taskItem">Task naem</li>
-                        <li class="list-group-item taskItem">Task name</li>
-                        <li class="list-group-item taskItem">Task name</li>
                         <li class="list-group-item taskItem">Task name</li>
                     </ul>
                 </div>
                 <div class="card">
-                    <ul class="list-group list-group-flush">
-                        <li class="list-group-item taskItem">Task name</li>
-                        <li class="list-group-item taskItem">Task naem</li>
-                        <li class="list-group-item taskItem">Task name</li>
-                    </ul>
-                </div>
-                <div class="card">
-                    <ul class="list-group list-group-flush">
+                    <ul class="list-group list-group-flush" ondrop="drop(event)" ondragover="allowDrop(event)">
                         <li class="list-group-item taskItem">Task name</li>
                         <li class="list-group-item taskItem">Task naem</li>
                         <li class="list-group-item taskItem">Task name</li>
@@ -70,21 +70,21 @@
                     </ul>
                 </div>
                 <div class="card my-custom-scrollbar">
-                    <ul class="list-group list-group-flush">
+                    <ul class="list-group list-group-flush" ondrop="drop(event)" ondragover="allowDrop(event)">
                         <li class="list-group-item taskItem">Task name</li>
                         <li class="list-group-item taskItem">Task naem</li>
                         <li class="list-group-item taskItem">Task name</li>
                     </ul>
                 </div>
                 <div class="card">
-                    <ul class="list-group list-group-flush">
+                    <ul class="list-group list-group-flush" ondrop="drop(event)" ondragover="allowDrop(event)">
                         <li class="list-group-item taskItem">Task name</li>
                         <li class="list-group-item taskItem">Task naem</li>
                         <li class="list-group-item taskItem">Task name</li>
                     </ul>
                 </div>
                 <div class="card">
-                    <ul class="list-group list-group-flush">
+                    <ul class="list-group list-group-flush" ondrop="drop(event)" ondragover="allowDrop(event)">
                         <li class="list-group-item taskItem">Task name</li>
                         <li class="list-group-item taskItem">Task naem</li>
                         <li class="list-group-item taskItem">Task name</li>
