--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -47,7 +47,8 @@
             <div class="taskViewGrid" id="taskView">
                 <div class="card">
                     <ul class="list-group list-group-flush" ondrop="drop(event)" ondragover="allowDrop(event)">
-                        <li draggable="true" ondragstart="drag(event)" class="list-group-item taskItem">Task name</li>
+                        <li id="asdd" draggable="true" ondragstart="drag(event)" class="list-group-item taskItem">Task
+                            name</li>
                         <li draggable="true" ondragstart="drag(event)" class="list-group-item taskItem">Task naem</li>
                         <li draggable="true" ondragstart="drag(event)" class="list-group-item taskItem">Task name</li>
                         <li draggable="true" ondragstart="drag(event)" class="list-group-item taskItem">Task name</li>
