made some stuff, uploaded via bat

--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -46,52 +46,36 @@
             </div>
             <div class="taskViewGrid" id="taskView">
                 <div class="card">
-                    <ul class="list-group list-group-flush" ondrop="drop(event)" ondragover="allowDrop(event)">
-                        <li id="asdd" draggable="true" ondragstart="drag(event)" class="list-group-item taskItem">Task
-                            name</li>
-                        <li draggable="true" ondragstart="drag(event)" class="list-group-item taskItem">Task naem</li>
-                        <li draggable="true" ondragstart="drag(event)" class="list-group-item taskItem">Task name</li>
-                        <li draggable="true" ondragstart="drag(event)" class="list-group-item taskItem">Task name</li>
-                        <li draggable="true" ondragstart="drag(event)" class="list-group-item taskItem">Task name</li>
+                    <ul id="BACKLOG" class="list-group list-group-flush" ondrop="drop(event)"
+                        ondragover="allowDrop(event)">
                     </ul>
                 </div>
                 <div class="card">
-                    <ul class="list-group list-group-flush" ondrop="drop(event)" ondragover="allowDrop(event)">
-                        <li class="list-group-item taskItem">Task name</li>
-                        <li class="list-group-item taskItem">Task naem</li>
-                        <li class="list-group-item taskItem">Task name</li>
+                    <ul id="TODO" class="list-group list-group-flush" ondrop="drop(event)"
+                        ondragover="allowDrop(event)">
                     </ul>
                 </div>
                 <div class="card">
-                    <ul class="list-group list-group-flush" ondrop="drop(event)" ondragover="allowDrop(event)">
-                        <li class="list-group-item taskItem">Task name</li>
-                        <li class="list-group-item taskItem">Task naem</li>
-                        <li class="list-group-item taskItem">Task name</li>
-                        <li class="list-group-item taskItem">Task name</li>
-                    </ul>
-                </div>
-                <div class="card my-custom-scrollbar">
-                    <ul class="list-group list-group-flush" ondrop="drop(event)" ondragover="allowDrop(event)">
-                        <li class="list-group-item taskItem">Task name</li>
-                        <li class="list-group-item taskItem">Task naem</li>
-                        <li class="list-group-item taskItem">Task name</li>
+                    <ul id="INPROGRESS" class="list-group list-group-flush" ondrop="drop(event)"
+                        ondragover="allowDrop(event)">
+
                     </ul>
                 </div>
                 <div class="card">
-                    <ul class="list-group list-group-flush" ondrop="drop(event)" ondragover="allowDrop(event)">
-                        <li class="list-group-item taskItem">Task name</li>
-                        <li class="list-group-item taskItem">Task naem</li>
-                        <li class="list-group-item taskItem">Task name</li>
+                    <ul id="TOVERIFY" class="list-group list-group-flush" ondrop="drop(event)"
+                        ondragover="allowDrop(event)">
+
                     </ul>
                 </div>
                 <div class="card">
-                    <ul class="list-group list-group-flush" ondrop="drop(event)" ondragover="allowDrop(event)">
-                        <li class="list-group-item taskItem">Task name</li>
-                        <li class="list-group-item taskItem">Task naem</li>
-                        <li class="list-group-item taskItem">Task name</li>
-                        <li class="list-group-item taskItem">Task name</li>
-                        <li class="list-group-item taskItem">Task name</li>
-                        <li class="list-group-item taskItem">Task name</li>
+                    <ul id="IMPEDIMENTS" class="list-group list-group-flush" ondrop="drop(event)"
+                        ondragover="allowDrop(event)">
+
+                    </ul>
+                </div>
+                <div class="card">
+                    <ul id="DONE" class="list-group list-group-flush" ondrop="drop(event)"
+                        ondragover="allowDrop(event)">
                     </ul>
                 </div>
             </div>
