made some stuff, uploaded via bat

--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -122,10 +122,10 @@
     <footer>
         <div class="bar"></div>
     </footer>
-    <script src="./public/js/jquery/jquery.js"></script>
-    <script src="./public/js/socket.io/socket.io.js"></script>
-    <script src="./public/js/socket.io.js"></script>
-    <script src="./public/js/dashboardDesign.js"></script>
+    <script src="./public/js/jquery/jquery.js" defer></script>
+    <script src="./public/js/socket.io/socket.io.js" defer></script>
+    <script src="./public/js/socket.io.js" defer></script>
+    <script src="./public/js/dashboardDesign.js" defer></script>
 </body>
 
 </html>
