--- a/views/signup.html
+++ b/views/signup.html
@@ -37,7 +37,7 @@
 
     </header>
     <main>
-        <div class="alert alert-danger hidden" role="alert" id="alert">
+        <div class="alert alert-danger hide" role="alert" id="alert">
             This is a danger alert—check it out!
         </div>
         <div class="form">
