--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -24,7 +24,7 @@
                         <a class="nav-link" href="/dashboard">Dashboard</a>
                     </li>
                 </ul>
-                <ul class="navbar-nav mt-2 mt-lg-0">
+                <ul class="navbar-nav mt-2 mt-lg-0" id="userControl">
                     <li class="nav-item">
                         <a class="nav-link" href="/login">Log In</a>
                     </li>
@@ -126,6 +126,7 @@
     <script src="./public/js/socket.io/socket.io.js" defer></script>
     <script src="./public/js/socket.io.js" defer></script>
     <script src="./public/js/dashboardDesign.js" defer></script>
+    <script src="./public/js/userAgent.js"></script>
 </body>
 
 </html>
