--- a/views/index.html
+++ b/views/index.html
@@ -24,7 +24,7 @@
                         <a class="nav-link" href="/dashboard">Dashboard</a>
                     </li>
                 </ul>
-                <ul class="navbar-nav mt-2 mt-lg-0">
+                <ul class="navbar-nav mt-2 mt-lg-0" id="userControl">
                     <li class="nav-item">
                         <a class="nav-link" href="/login">Log In</a>
                     </li>
@@ -40,7 +40,9 @@
     <footer>
 
     </footer>
+    <script src="./public/js/jquery/jquery.js"></script>
 
+    <script src="./public/js/userAgent.js"></script>
 </body>
 
 </html>
