--- a/views/login.html
+++ b/views/login.html
@@ -24,7 +24,7 @@
                         <a class="nav-link" href="/dashboard">Dashboard</a>
                     </li>
                 </ul>
-                <ul class="navbar-nav mt-2 mt-lg-0" id="account">
+                <ul class="navbar-nav mt-2 mt-lg-0" id="userControl">
                     <li class="nav-item">
                         <a class="nav-link active" href="/login">Log In</a>
                     </li>
@@ -63,7 +63,7 @@
     <script src="./public/js/jquery/jquery.js"></script>
     <script src="./public/js/signuplogin.js"></script>
     <script src="./public/js/js.js"></script>
-
+    <script src="./public/js/userAgent.js"></script>
 </body>
 
 </html>
