--- a/public/css/style.css
+++ b/public/css/style.css
@@ -30,46 +30,12 @@ li.active>a {
 }
 
 .hide {
-    display: none;
-}
-
-.desc {
-    transition: all 250ms ease-in-out;
-    overflow: hidden;
-    height: 100%;
-}
-
-.hidden {
-    height: 0px;
+    display: none !important;
 }
 
 .alert {
     width: 90%;
     margin: 1em auto;
-}
-
-.taskViewGrid {
-    display: grid;
-    grid-template-columns: repeat(6, minmax(auto, 16.6%));
-    grid-template-rows: auto;
-    gap: 0.3em;
-}
-
-.taskHolder {
-    border: 2px solid black;
-    padding: 0.5em;
-    transition: 100ms ease-in-out;
-}
-
-.taskHolder:hover {
-    background-color: #63BFBF;
-}
-
-.tasks {
-    border-radius: 2em;
-    width: 90%;
-    margin: auto;
-    padding: 2em;
 }
 
 .center {
@@ -93,46 +59,6 @@ li.active>a {
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(255, 0, 0, 0.6);
 }
 
-.taskItem {
-    transition: 250ms ease-in-out;
-    height: 3em;
-}
-
 ul {
     height: 100%;
-}
-
-.taskItem:hover {
-    background: lightgray;
-    height: 5em;
-}
-
-.card {
-    display: flex;
-    height: 40vh;
-    overflow: hidden;
-}
-
-/* width */
-
-::-webkit-scrollbar {
-    width: 5px;
-}
-
-/* Track */
-
-::-webkit-scrollbar-track {
-    background: #f1f1f1;
-}
-
-/* Handle */
-
-::-webkit-scrollbar-thumb {
-    background: #888;
-}
-
-/* Handle on hover */
-
-::-webkit-scrollbar-thumb:hover {
-    background: #555;
 }
