--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -24,7 +24,7 @@
                         <a class="nav-link" href="/dashboard">Dashboard</a>
                     </li>
                 </ul>
-                <ul class="navbar-nav mt-2 mt-lg-0">
+                <ul class="navbar-nav mt-2 mt-lg-0" id="userControl">
                     <li class="nav-item">
                         <a class="nav-link" href="/login">Log In</a>
                     </li>
@@ -93,24 +93,7 @@
                     </div>
                     <!-- INPUT -->
                     <div id="taskForm">
-                        <div id="form">
-                            <div class="input-group mb-3">
-                                <div class="input-group-prepend">
-                                    <span class="input-group-text">Task Name</span>
-                                </div>
-                                <input type="text" class="form-control" id="taskNameInput" placeholder="Task Name"
-                                    aria-label="Task Name" aria-describedby="basic-addon1">
-                            </div>
-                            <div class="input-group mb-3">
-                                <div class="input-group-prepend">
-                                    <span class="input-group-text">Task Description</span>
-                                </div>
-                                <input type="text" class="form-control" placeholder="Task Description"
-                                    aria-label="Task Description" id="taskDescriptionInput"
-                                    aria-describedby="basic-addon1">
-                            </div>
-                            <button type="button" id="submitTask" class="btn btn-outline-primary">Add Task</button>
-                        </div>
+                        
                     </div>
                 </div>
                 <div id="comments"></div>
@@ -126,6 +109,7 @@
     <script src="./public/js/socket.io/socket.io.js" defer></script>
     <script src="./public/js/socket.io.js" defer></script>
     <script src="./public/js/dashboardDesign.js" defer></script>
+    <script src="./public/js/userAgent.js"></script>
 </body>
 
 </html>
