--- a/views/signup.html
+++ b/views/signup.html
@@ -24,7 +24,7 @@
                         <a class="nav-link" href="/dashboard">Dashboard</a>
                     </li>
                 </ul>
-                <ul class="navbar-nav mt-2 mt-lg-0">
+                <ul class="navbar-nav mt-2 mt-lg-0" id="userControl">
                     <li class="nav-item">
                         <a class="nav-link" href="/login">Log In</a>
                     </li>
@@ -37,7 +37,7 @@
 
     </header>
     <main>
-        <div class="alert alert-danger hidden" role="alert" id="alert">
+        <div class="alert alert-danger hide" role="alert" id="alert">
             This is a danger alert—check it out!
         </div>
         <div class="form">
@@ -93,6 +93,7 @@
     </footer>
     <script src="./public/js/jquery/jquery.js"></script>
     <script src="./public/js/signuplogin.js"></script>
+    <script src="./public/js/userAgent.js"></script>
 </body>
 
 </html>
